...
      locale: localeName,
    );
  }

  String get name {
    return Intl.message(
      'Name',
      desc: 'Describes the field where the tokens name should be entered.',
      locale: localeName,
    );
  }

  String get secret {
    return Intl.message(
      'Secret',
      desc: 'Describes the field where the tokens secret should be entered.',
      locale: localeName,
    );
  }

  String get encoding {
...
      locale: localeName,
    );
  }

  String get rename {
    return Intl.message(
      'Rename',
      desc: 'Label that describes renaming the token.',
      locale: localeName,
    );
  }

  String get cancel {
...
      locale: localeName,
    );
  }

  String get delete {
    return Intl.message(
      'Delete',
      desc: 'Label that describes deleting the token.',
      locale: localeName,
    );
  }

  String get dismiss {
...
      locale: localeName,
    );
  }

  String get addManually {
    return Intl.message(
      'Add token',
      desc: 'The button to open the screen to add tokens by hand.',
      locale: localeName,
    );
  }

  String get scanQr {
...
      locale: localeName,
    );
  }

  String get renameDialogTitle {
    return Intl.message(
      'Rename token',
      desc: 'Title of the dialog where a new name for a token can be entered.',
      locale: localeName,
    );
  }

  String get deleteDialogTitle {
    return Intl.message(
      'Confirm deletion',
      desc: 'Title of the dialog where a token can be deleted.',
      locale: localeName,
    );
  }

  String confirmDeletionOf(String name) {
...
